chore: Minor fix for an overlap

--- a/styles/media.css
+++ b/styles/media.css
@@ -19,7 +19,7 @@
 
 @media (max-width: 420px) {
   .list-apps {
-    height: 900px;
+    height: 1000px;
   }
 
   .list-app,
